# cleanLogo

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cleanLogo  cleanLogo.cbp  cmake_install.cmake  logo_t.psd  main.cpp  new_logo.psd  new_logo_t.psd
